# harmony

./: .gitignore  CMakeLists.txt
harmonyctl/: CMakeLists.txt  main.cpp
libharmony/: CMakeLists.txt  action.hpp  csocket.cpp  device.hpp  function.hpp  harmony.cpp  harmony.hpp
libharmony/include/: config.h
